<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey"
    tools:context=".act.EditAdcAct">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vpImages"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                    </androidx.viewpager2.widget.ViewPager2>

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/edit_image_button"
                        android:onClick="onClickGetImages"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="@+id/vpImages"
                        app:layout_constraintTop_toTopOf="@+id/vpImages"
                        app:srcCompat="@drawable/ic_edit" />

                    <ProgressBar
                        android:id="@+id/pBarLoad"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/vpImages"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/vpImages"
                        app:layout_constraintTop_toTopOf="@+id/vpImages" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAdress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tvTitleCountry2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/country"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCountry"
                        android:padding="10dp"
                        android:text="@string/select_country"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/city"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCity"
                        android:padding="10dp"
                        android:text="@string/select_city"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleTel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/phone"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edTel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColorHint="@color/darkgrey" />

                    <LinearLayout
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/index"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/index"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColorHint="@color/darkgrey" />

                    <LinearLayout
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleIndex2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/delivery"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/checkBoxWithDelivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/with_delivery" />

                    <LinearLayout
                        android:id="@+id/divider5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/category"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCat"
                        android:padding="10dp"
                        android:text="@string/select_category"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider05"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/title"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/title_hint"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textColorHint="@color/darkgrey" />

                    <LinearLayout
                        android:id="@+id/divider01"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitlePrice2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/price"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/price_hint"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColorHint="@color/darkgrey" />

                    <LinearLayout
                        android:id="@+id/divider03"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/description"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/description_hint"
                        android:padding="10dp"
                        android:textColorHint="@color/darkgrey" />

                    <LinearLayout
                        android:id="@+id/divider04"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btPublish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="onClickPublish"
                android:text="@string/publish"
                android:textColor="@color/green_main"
                app:backgroundTint="@color/white" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>